--- a/E-Commerce Website Example/src/css/App.css
+++ b/E-Commerce Website Example/src/css/App.css
@@ -1,8 +1,10 @@
+/* Remove max-width and padding for full width on mobile */
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .logo {
