--- a/E-Commerce Website Example/src/css/index.css
+++ b/E-Commerce Website Example/src/css/index.css
@@ -25,10 +25,26 @@ body {
   background: rgba(53, 138, 242, 1) 0%;
   font-family: 'Arial', sans-serif;
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+  padding: 0;
+}
+
+.main-container {
+  margin-top: 3.2rem;
+  width: 100vw;
+  min-height: calc(100vh - 3.2rem);
+  box-sizing: border-box;
+  padding: 0 0.5rem;
+}
+
+@media (max-width: 700px) {
+  .main-container {
+    margin-top: 2.5rem;
+    padding: 0 0.1rem;
+  }
 }
 
 h1 {
