--- a/E-Commerce Website Example/src/css/ShoppingItem.css
+++ b/E-Commerce Website Example/src/css/ShoppingItem.css
@@ -18,7 +18,9 @@
         padding: 0.4rem 0.1rem;
         font-size: 0.85rem;
         gap: 0.3rem;
-        width: 98vw;
+    width: 95vw;
+    margin-left: auto;
+    margin-right: auto;
         min-width: 0;
     }
     .shopping-item-details h2, .shopping-item-details p {
