--- a/E-Commerce Website Example/src/css/welcome.css
+++ b/E-Commerce Website Example/src/css/welcome.css
@@ -94,6 +94,11 @@
 
 @media (max-width: 700px) {
   .welcome-title {
+    display: none;
+  }
+}
+@media (max-width: 700px) {
+  .welcome-title {
     font-size: 1.3rem;
     padding: 0.5rem 0;
   }
