--- a/E-Commerce Website Example/src/css/Home.css
+++ b/E-Commerce Website Example/src/css/Home.css
@@ -1,8 +1,3 @@
-
-@media(max-width: 1100px) {
-}
-
-
 @media (max-width: 900px) {
     .home-content-row {
         flex-direction: column;
@@ -138,7 +133,6 @@
     height: auto;
 }
 .search-filter-bar {
-    /* Removed sticky/fixed so it scrolls with the page */
     padding: 1em 0 1em 0;
     display: flex;
     gap: 2em;
@@ -189,7 +183,8 @@
 .category-radio-label {
     margin-right: 1em;
     font-size: 1em;
-    color: white;
+    color: black;
+    font-weight: bold;
     cursor: pointer;
     white-space: nowrap;
 }
